[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driftnet-npi"
version = "0.2.0"
description = "Physics-Informed Neural Path Integral for Rare-Event Simulation in Quantitative Finance"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "YoungJun" }]
keywords = ["neural-sde", "importance-sampling", "rare-event", "quantitative-finance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.23,<2.0",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "torch>=2.0",
    "pyyaml>=6.0",
    "omegaconf>=2.3",
    "psutil>=5.9",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]
ml = [
    "scikit-learn>=1.3",
    "xgboost>=1.7",
    "captum>=0.7",
]

[project.scripts]
driftnet = "driftnet.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "driftnet*"]

[tool.setuptools.package-dir]
driftnet = "src"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks/**", "notebooks/archive/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "NPY"]
ignore = ["E501"]  # line too long (use formatter)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests that take > 30s",
    "gpu: requires CUDA",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]
exclude = ["notebooks/", "build/"]
